--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -48,11 +48,11 @@ header h1 {
 }
 
 .search-field form {
-  @apply sm:ml-5 max-[639px]:mx-auto
+  @apply sm:ml-5 max-[639px]:mx-auto max-[639px]:w-full;
 }
 
 .search-field form input {
-  @apply max-[639px]:py-4 max-[639px]:ps-[30px];
+  @apply max-[639px]:py-4 max-[639px]:ps-[30px] max-[639px]:w-[89%];
 }
 
 .drop-down-icon {
@@ -116,11 +116,11 @@ header h1 {
 }
 
 .pagination-container a {
-  @apply border-2 border-paginate rounded w-6/12 px-2 py-1 dark:text-white dark:bg-dark-mode-elements-dark-blue;
+  @apply border-2 border-paginate rounded w-6/12 px-3 dark:text-white dark:bg-dark-mode-elements-dark-blue;
 }
 
 .active-btn {
-  @apply bg-paginate text-white h-full;
+  @apply bg-paginate text-white h-max;
 }
 
 .single-container {
